--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pragm S.A.</title>
-	<link href="http://marcelo826.github.io/projeto-Pragm/style.css" rel="stylesheet">
+	<link href="https://marcelo826.github.io/projeto-Pragm/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
