--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<a href="" class="button"> Learn more</a>
 				</div>
 				<div class="section-aboutus--right">
-					<img src="media/foto6.jpg">
+					<img src="assets/images/foto6.jpg">
 				</div>
 				</div>
 			</div>
@@ -127,7 +127,7 @@
 								<div class="section-projects--photoinfo"><h5>NUVEM</h5>
 									<p> ofas sdakmfb alejfir kkj</p>
 								</div>
-								<img src="media/nuvem.jpg">
+								<img src="assets/images/nuvem.jpg">
 							</div>
 						</div>
 						<div class="section-projects--photo">
@@ -136,7 +136,7 @@
 									<h5>CÂMERAS DE SEGURANÇA</h5>
 									<p> ofas sdakmfb alejfir kkj</p>
 								</div>
-								<img src="media/Padrao.jpg">
+								<img src="assets/images/Padrao.jpg">
 							</div>
 						</div>
 						<div class="section-projects--photo">
@@ -145,7 +145,7 @@
 									<h5>LEITOR BIOMETRIA</h5>
 									<p> ofas sdakmfb alejfir kkj</p>
 								</div>
-								<img src="media/leitor-biometria-digital.jpg">
+								<img src="assets/images/leitor-biometria-digital.jpg">
 							</div>
 						</div>
 						<div class="section-projects--photo">
@@ -154,7 +154,7 @@
 									<h5>HOSPEDAGEM</h5>
 									<p> ofas sdakmfb alejfir kkj</p>
 								</div>
-								<img src="media/hospedagem.jpg">
+								<img src="assets/images/hospedagem.jpg">
 							</div>
 						</div>
 						<div class="section-projects--photo">
@@ -163,7 +163,7 @@
 									<h5>CYBERSECURITY</h5>
 									<p> ofas sdakmfb alejfir kkj</p>
 								</div>
-								<img src="media/hacker.png">
+								<img src="assets/images/hacker.png">
 							</div>
 						</div>
 						<div class="section-projects--photo">
@@ -172,7 +172,7 @@
 									<h5>BANCO DE DADOS</h5>
 									<p> ofas sdakmfb alejfir kkj</p>
 								</div>
-								<img src="media/bd.jpg">
+								<img src="assets/images/bd.jpg">
 							</div>
 						</div>
 
@@ -193,7 +193,7 @@
 				<div class="slide">
 					<div class="slidearea">
 						
-					<img class="section-team--avatar" src="media/mara.jpeg">
+					<img class="section-team--avatar" src="assets/images/mara.jpeg">
 					<div class="section-team--name">Amaralisa</div>
 					<div class="section-team-role">Coordenador Administrativo</div>
 					<div class="section-team--social">
@@ -245,22 +245,22 @@
         <div class="section-body">
             <div class="section-companies--area">
                 <div class="section-company">
-                    <img class="section-company--photo" src="media/PETRORIO.png" />
+                    <img class="section-company--photo" src="assets/images/PETRORIO.png" />
                 </div>
                 <div class="section-company">
-                    <img src="media/empresa2.png" />
+                    <img src="assets/images/empresa2.png" />
                 </div>
                 <div class="section-company">
-                    <img src="media/empresa3.png" />
+                    <img src="assets/images/empresa3.png" />
                 </div>
                 <div class="section-company">
-                    <img src="media/empresa4.png" />
+                    <img src="assets/images/empresa4.png" />
                 </div>
                 <div class="section-company">
-                    <img class="section-company--photo" src="media/ey.jpg" />
+                    <img class="section-company--photo" src="assets/images/ey.jpg" />
                 </div>
                 <div class="section-company">
-                    <img src="media/empresa6.png" />
+                    <img src="assets/images/empresa6.png" />
                 </div>
             </div>
         </div>
